--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -1,3 +1,14 @@
+@article{akaike1974new,
+  title={A new look at the statistical model identification},
+  author={Akaike, Hirotugu},
+  journal={IEEE transactions on automatic control},
+  volume={19},
+  number={6},
+  pages={716--723},
+  year={1974},
+  publisher={Ieee}
+}
+
 @incollection{brooks1978nonanalytic,
   author      = {Brooks, Lee R},
   title       = {Nonanalytic concept formation and memory for instances},
