Looking great! i made some edits and a few comments.  things are progressing nicely

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -20,6 +20,16 @@
   pages       = {169--211},
 }
 
+@article{attneave1950,
+  author = {F. Attneave},
+  title = {Dimensions of Similarity},
+  journal = {The American Journal of Psychology},
+  volume = {63},
+  number = {4},
+  pages = {516--556},
+  year = {1950}
+}
+
 @article{conaway2016similar,
   author="Conaway, Nolan and Kurtz, Kenneth J.",
   title="Similar to the category, but not the exemplars: A study of generalization",
