minor edits to manuscript

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -9,6 +9,16 @@
   publisher={Ieee}
 }
 
+@article{attneave1950,
+  author={Attneave, Fred},
+  title = {Dimensions of Similarity},
+  journal = {The American Journal of Psychology},
+  volume = {63},
+  number = {4},
+  pages = {516--556},
+  year = {1950}
+}
+
 @incollection{brooks1978nonanalytic,
   author      = {Brooks, Lee R},
   title       = {Nonanalytic concept formation and memory for instances},
@@ -18,16 +28,6 @@
   address     = "Hillsdale, NJ",
   year        = 1978,
   pages       = {169--211},
-}
-
-@article{attneave1950,
-  author = {F. Attneave},
-  title = {Dimensions of Similarity},
-  journal = {The American Journal of Psychology},
-  volume = {63},
-  number = {4},
-  pages = {516--556},
-  year = {1950}
 }
 
 @article{conaway2016similar,
@@ -47,6 +47,17 @@
  publisher = "Erlbaum",
  address = "Potomac, MD",
  year = 1974
+}
+
+@incollection{goodman1972seven,
+ author = "Goodman, Nelson",
+ title = "Seven strictures on similarity",
+ booktitle = "Problems and projects",
+ editor = "N. Goodman",
+ address = "Indianapolis, IN",
+ publisher = "Bobbs-Merrill",
+ pages = "437--447",
+ year = 1972
 }
 
 @article{hidaka2011packing,
