--- a/Manuscripts/model-descriptions/packer/packer.tex
+++ b/Manuscripts/model-descriptions/packer/packer.tex
@@ -12,43 +12,31 @@
 
 This model assumes that people represent categories as exemplars in a multidimensional space, and that generation is constrained by both similarity to members of the category being generated \textit{and} dissimilarity to members of other categories. The model assumes people generate categories that are dissimilar to known categories and have strong within-class similarity.
 
-First, let's assume exemplars $x$ are represented as points within an $k$-dimensional space. When prompted to generate the first member of a new class, participants seek out stimuli that have low similarity to all assigned examples.
-
-Distance between exemplars $X_i$ and $X_j$ is computed using the city-block metric:
+The similarity between exemplars $x_i$ and $x_j$ is computed using Shepard's law:
 
 \begin{equation}
-  d(x_i,x_j) = \sum_{k}{|x_{ik} - x_{jk}|}w_k
+s\left(x_i,x_j\right) = \exp \left\{ -c \left[\sum_{k}{ w_k \left| x_{ik} - x_{jk} \right|^r }\right]^{1/r} \right\}
+\label{eq:similarity}
 \end{equation}
 
-Where $w_k$ is a vector of feature weights, corresponding to the importance of each feature in the similarity computation. The attention weights are of interest in explaining individual differences in generation strategy, and they may have some relation to the relative dimensional variance of existing categories, but for the general case they can be uniform.
-
-The similarity between exemplars $x_i$ and $x_j$ is then computed using Shepard's law:
+When prompted to make a generation decision, participants are thought to consider both similarity to examples from other categories as well as similarity to examples in the target category. More formally, the aggregated similarity $a$ between candidate $y$ and the model's stored exemplars $x$ can be computed as:
 
 \begin{equation}
-  s(x_i,x_j) = exp( {-c d(x_i,x_j)} )
+  a(y, x) = \sum_j{f(x_j) s(y, x_j)}
 \end{equation}
 
-Where $c$ is a free parameter setting the specificity of examples. Larger values of $c$ produce more \textit{specific} exemplars -- only stimuli very close to the exemplar will be viewed as similar. Due to the nature of the exponential function, similarity values will lie in range $0-1$, with a value of $1$ indicating an exact match between $x_i$ and $x_j$.
+Where $f(x_j)$ is a function specifying each stored example's degree of contribution toward generation. Although $f(x_j)$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of the target category, $f(x_j) = \gamma$. For members of contrast categories, $f(x_j) = -1 + \gamma$. $\gamma$ is thus a free parameter ($0 \leq \gamma \leq 1$) controlling the trade-off between within-class similarity and between-class dissimilarity: $\gamma = 1$ produces exclusive consideration of same-category members, and $\gamma = 0$ produces exclusive consideration of opposite-category members. When $\gamma = 0.5$, the similarity to contrast categories is effectively subtracted from the similarity to the target category.
 
-When prompted to make a generation decision, participants are thought to consider both similarity to examples from other categories as well as similarity to examples in the target category. More formally, the summed similarity $ss$ between item $x_i$ and the model's stored exemplars $x_j$ can be computed as:
+The probability that a given item $y$ will be generated given the model's memory $x$ is computed using relative summed similarity values across all generation candidates $y_i$:
 
 \begin{equation}
-  ss(x_i, x_j) = \sum_j{f_j s(x_i, x_j)}
+p(y) = \dfrac
+{ \exp  \left \{ \theta \cdot a \left( y, x \right) \right \} } 
+{ \sum_i{ \exp  \left \{ \theta \cdot a \left( y_i, x \right) \right\}  } }
+\label{eq:packer-choice}
 \end{equation}
 
-Where $f_j$ is a function specifying each stored example's degree of contribution toward generation. Although $f_j$ may be set arbitrarily, for our purposes it is relevant to use the class assignment. For known members of contrast categories, $f_j = -\phi$. For known members of the target category, $f_j = \gamma$. $\phi$ and $\gamma$ are free parameters ($\geq 0$) that control the contribution of same- and opposite- category members to generation. Larger values for either parameter produce greater consideration of either constraint. Values of 0 for either parameter result in no effect for that type of similarity.
-
-This arrangement has a number of desirable properties. When $\phi = \gamma$, the similarity to contrast categories is effectively subtracted from the similarity to the target category -- negative values for $ss(x, x_j)$ thus indicate more contrast category similarity, and positive values indicate more target category similarity. Because $\phi$ and $\gamma$ are parameterized, this trade off can be managed explicitly. 
-
-The probability that a given item $x$ will be generated given the model's memory $x_j$ is computed using relative summed similarity values across all generation candidates $x_i$:
-
-\begin{equation}
-p(x|x_j) = \dfrac
-    { exp( { \theta ss(x, x_j) } ) }
-    { \sum_i{ exp( { \theta ss(x_i, x_j) } ) } }
-\end{equation}
-
-Where $\theta$ ($\geq 0$) is a free parameter controlling overall response determinism. Larger values of $\theta$ produce greater adherence to the relative probabilities of the choices (items with larger probabilities become more likely), and the special case of $\theta = 0$ produces random responding. Participants are not allowed to generate the same example twice, thus $p_x$ for these items is manually set to 0.
+Where $\theta$ ($\geq 0$) is a free parameter controlling overall response determinism.
 
 
 
