update manuscript to reflect new packer params

--- a/Manuscripts/model-descriptions/packer/packer.tex
+++ b/Manuscripts/model-descriptions/packer/packer.tex
@@ -25,7 +25,7 @@ When prompted to make a generation decision, participants are thought to conside
   a(y, x) = \sum_j{f(x_j) s(y, x_j)}
 \end{equation}
 
-Where $f(x_j)$ is a function specifying each stored example's degree of contribution toward generation. Although $f(x_j)$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of the target category, $f(x_j) = \gamma$. For members of contrast categories, $f(x_j) = -1 + \gamma$. $\gamma$ is thus a free parameter ($0 \leq \gamma \leq 1$) controlling the trade-off between within-class similarity and between-class dissimilarity: $\gamma = 1$ produces exclusive consideration of same-category members, and $\gamma = 0$ produces exclusive consideration of opposite-category members. When $\gamma = 0.5$, the similarity to contrast categories is effectively subtracted from the similarity to the target category.
+Where $f(x_j)$ is a function specifying each stored example's degree of contribution toward generation. Although $f(x_j)$ may be set arbitrarily, in PACKER it is set according to class assignment. For known members of the target category, $f(x_j) = \gamma$. For members of contrast categories, $f(x_j) = \gamma - 1$. $\gamma$ is thus a free parameter ($0 \leq \gamma \leq 1$) controlling the trade-off between within-class similarity and between-class dissimilarity: $\gamma = 1$ produces exclusive consideration of same-category members, and $\gamma = 0$ produces exclusive consideration of opposite-category members. When $\gamma = 0.5$, the similarity to contrast categories is effectively subtracted from the similarity to the target category.
 
 The probability that a given item $y$ will be generated given the model's memory $x$ is computed using relative summed similarity values across all generation candidates $y_i$:
 
